# AIChatGUI

./: .gitignore  CMakeLists.txt  ChatList.qml  Main.qml  MessageBubble.qml  ModelPanel.qml  README.md  SimpleMessageBubble.qml  chatmanager.cpp  chatmanager.h  clipboardhelper.cpp  clipboardhelper.h  devlog.md  llamaconnector.cpp  llamaconnector.h  lmstudioconnector.cpp  lmstudioconnector.h  main.cpp  message.h  messagelistmodel.cpp  messagelistmodel.h  modelinfo.cpp  modelinfo.h  qml.qrc  syntaxhighlighter.cpp  syntaxhighlighter.h
